:bug: BugFix overflow on editing or creating MenuWidget

--- a/Resources/public/less/menu.less
+++ b/Resources/public/less/menu.less
@@ -1,3 +1,8 @@
+
+.overflow-hidden {
+    overflow: hidden;
+}
+
 .submenu-show
 {
     border-radius: 3px;
